--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+sendgrid.env
+/config/local_env.yml
+# Ignore application configuration
+/config/application.yml
